[package]
name = "ziggurat-xrpl"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21.0"
bytes = "1"
fs_extra = "1.2"
hex = "0.4"
histogram = "0.7.0"
home = "0.5.3"
httparse = "1.7"
metrics = "0.20.0"
metrics-util = "0.14.0"
openssl = "0.10"
pea2pea = "0.45"
prost = "0.11.6"
rand_chacha = "0.3"
serde_json = "1.0"
sha2 = "0.10"
tabled = "0.10"
tempfile = "3.3"
tokio-openssl = "0.6"
toml = "0.5.9"
ziggurat-core-metrics = { git = "https://github.com/runziggurat/ziggurat-core", tag = "v0.1.2-zgm" }
ziggurat-core-utils = { git = "https://github.com/runziggurat/ziggurat-core", tag = "v0.1.0" }

[dependencies.bs58]
version = "0.4.0"
default-features = false
features = ["check", "alloc"]

[dependencies.clap]
version = "4.0.29"
features = ["derive"]
optional = true

[dependencies.futures-util]
version = "0.3"
features = ["sink"]

[dependencies.jsonrpsee]
version = "0.16.2"
features = ["server"]
optional = true

[dependencies.md5]
version = "0.7"
optional = true

[dependencies.rand]
version = "0.8"
default-features = false
features = ["getrandom", "small_rng"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.secp256k1]
version = "0.26"
features = ["global-context", "rand-std"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.thiserror]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tokio-util]
version = "0.7"
features = ["codec"]

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec"]

[dependencies.spectre]
git = "https://github.com/niklaslong/spectre"
rev = "9a0664f"
optional = true

[dependencies.ziggurat-core-crawler]
git = "https://github.com/runziggurat/ziggurat-core"
rev = "1a5c2e2"
optional = true

[features]
crawler = ["clap", "thiserror", "jsonrpsee", "spectre", "ziggurat-core-crawler"]
performance = []

[[bin]]
name = "crawler"
path = "src/tools/crawler/main.rs"
required-features = ["crawler"]
