[package]
name = "synth_node_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
rand = "0.8"
tokio = "1.25"
tracing-subscriber = "0.3"
ziggurat-xrpl = { path = "../" }

[dependencies.tracing]
version = "0.1"
default-features = false
